--- a/wwwroot/css/layout.css
+++ b/wwwroot/css/layout.css
@@ -14,7 +14,8 @@ body {
   grid-template-rows: 1fr auto;
   min-height: 100vh;
   margin: 0;
-  background-color: #f5f7f9;
+  /* background-color: #f5f7f9; */
+  background-color: #f8f8f8;
   overflow-y: auto;
 }
 
@@ -51,14 +52,14 @@ nav {
   list-style: none;
 }
 .nav ul {
-    padding-left: 0 !important;
+  padding-left: 0 !important;
 }
 .nav-menu li a {
-    text-decoration: none;
-    color: white;
-    display: flex;
-    align-items: center;
-    gap: 10px;
+  text-decoration: none;
+  color: white;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 .nav-menu li {
   padding: 12px 20px;
@@ -157,7 +158,9 @@ footer {
   background: white;
   border-top: 1px solid #e1e4e8;
 }
-
+footer p{
+  margin-bottom: 0 !important;
+}
 .footer-content {
   display: flex;
   justify-content: space-between;
@@ -275,4 +278,16 @@ footer {
   border-radius: 0.375rem;
   cursor: pointer;
   transition: all 0.3s;
+}
+
+.no-data {
+  text-align: center;
+  padding: 40px;
+  color: #7f8c8d;
+}
+
+.no-data i {
+  font-size: 48px;
+  margin-bottom: 15px;
+  color: #e1e4e8;
 }
