--- a/Views/Clients/EmploymentInfo.cshtml
+++ b/Views/Clients/EmploymentInfo.cshtml
@@ -68,7 +68,10 @@
                                     <option value="high">High</option>
                                 </select>
                             </div>
-                            
+
+                            <button type="submit" id="btnContinue" class="btn-submit">Continue <i
+                                    class="fas fa-arrow-right"></i>
+                            </button>
                             <button type="submit" id="btnContinue" class="btn-submit">Continue <i
                                     class="fas fa-arrow-right"></i>
                             </button>
