--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="~/css/pagination.css" />
     <link rel="stylesheet" href="~/css/datatable.css" />
     <link rel="stylesheet" href="~/css/clientregistration.css" />
+    <link rel="stylesheet" href="~/css/form.css"/>
     <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
@@ -44,7 +45,7 @@
                 </a>
             </li>
             <li>
-                <a href="@Url.Action("Index", "Home")">
+                <a href="@Url.Action("ProfileComplete", "Clients")">
                     <i class="fas fa-tools"></i>
                     <span>Tools</span>
                 </a>
