--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="~/css/pagination.css" />
     <link rel="stylesheet" href="~/css/datatable.css" />
     <link rel="stylesheet" href="~/css/clientregistration.css" />
-    <link rel="stylesheet" href="~/css/form.css"/>
+    <link rel="stylesheet" href="~/css/form.css" />
     <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
@@ -45,7 +45,7 @@
                 </a>
             </li>
             <li>
-                <a href="@Url.Action("ProfileComplete", "Clients")">
+                <a href="@Url.Action("CompleteProfile", "Clients")">
                     <i class="fas fa-tools"></i>
                     <span>Tools</span>
                 </a>
