--- a/wwwroot/css/layout.css
+++ b/wwwroot/css/layout.css
@@ -157,15 +157,16 @@ main {
 }
 .content-body {
   margin-top: 15px;
+  padding: 10px;
 }
 .content-footer {
   display: flex;
   justify-content: flex-end; /* Aligns button to the right */
-  padding-top: 15px;
+  padding-top: 20px;
   border-top: 1px solid #e0e0e0;
 }
 
-.content-footer button {
+/* .content-footer button {
   background-color: #3498db;
   color: white;
   border: none;
@@ -174,7 +175,7 @@ main {
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-}
+} */
 
 .content-footer button:hover {
   background-color: #2980b9;
